--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-    <img src="./imgs/Group 4634.png" alt="">
+    <img class="imgs" src="./imgs/Group 4634.png" alt="">
+
+    <img src="./imgs/image 41.png" alt="">
 
 
 
