--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img class="imgs" src="./imgs/Group 4634.jpg" alt="">
+    <img class="imgs" src="./imgs/Groupsdsd 4634.png" alt="">
 
     <img src="./imgs/image 41.png" alt="">
 
