Fixing Some shits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <img class="imgs" src="./imgs/Groupsdsd 4634.png" alt="">
 
-    <img src="./imgs/image 41.png" alt="">
+    <img class="imgs2" src="./imgs/image 41 (1).png" alt="">
 
 
 
