--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img class="imgs" src="./imgs/Groupsdsd 4634.png" alt="">
+    <img class="imgs" src="./imgs/Groupsdsd 4634 (1).png" alt="">
 
     <img class="imgs2" src="./imgs/image 41 (1).png" alt="">
 
