--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-
     <img class="imgs" src="./imgs/Groupsdsd 4634 (1).png" alt="">
-
     <img class="imgs2" src="./imgs/image 41 (1).png" alt="">
+    <img class="LaserTagTextTop" src="./imgs/laserTagText.png" alt="">
 
 
 
