--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cx-LaserTag V1</title>
-
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./styles/Global.css">
+    <link rel="stylesheet" href="./styles/HomePage.css">
 </head>
 <body>
     <img class="imgs" src="./imgs/Groupsdsd 4634 (1).png" alt="">
