Doing some shit

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./styles/HomePage.css">
 </head>
 <body>
-    <img class="LeftVector" src="./imgs/VectorMainLeft.png" alt="">
-    <img class="ChracterRight" src="./imgs/image 41 (1).png" alt="">
+    <img class="ChracterRight" src="./imgs/ChracterRight.png" alt="">
     <img class="LaserTagTextTop" src="./imgs/laserTagText.png" alt="">
 
 
