Fixing some shit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,44 @@
 <body>
     <img class="ChracterRight" src="./imgs/ChracterRight.png" alt="">
     <img class="LaserTagTextTop" src="./imgs/laserTagText.png" alt="">
+    <div class="DotDiv">
+        <svg width="120" height="107" viewBox="0 0 120 107" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.2">
+            <path d="M2 2L13.0294 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M13.0294 2L2 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M37 2L48.0294 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M48.0294 2L37 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M72 2L83.0201 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M83.0201 2L72 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M106.984 2L118.014 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M118.014 2L106.984 13.0294" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M2 32.6569L13.0294 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M13.0294 32.6569L2 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M37 32.6569L48.0294 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M48.0294 32.6569L37 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M72 32.6569L83.0201 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M83.0201 32.6569L72 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M106.984 32.6569L118.014 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M118.014 32.6569L106.984 43.6863" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M2 63.3137L13.0294 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M13.0294 63.3137L2 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M37 63.3137L48.0294 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M48.0294 63.3137L37 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M72 63.3137L83.0201 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M83.0201 63.3137L72 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M106.984 63.3137L118.014 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M118.014 63.3137L106.984 74.3431" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M2 93.9706L13.0294 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M13.0294 93.9706L2 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M37 93.9706L48.0294 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M48.0294 93.9706L37 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M72 93.9706L83.0201 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M83.0201 93.9706L72 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M106.984 93.9706L118.014 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            <path d="M118.014 93.9706L106.984 105" stroke="white" stroke-width="3" stroke-miterlimit="10"/>
+            </g>
+            </svg> 
+    </div>
 
 
 
