--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             </svg> 
     </div>
 
-    <div class="card"></div>
+    <div>
+        <img src="./imgs/BottomBGDIV.svg" alt="">
+    </div>
+
 
 
 
