--- a/index.html
+++ b/index.html
@@ -49,8 +49,27 @@
             </svg> 
     </div>
 
-    <div>
-        <img src="./imgs/BottomBGDIV.svg" alt="">
+
+    <div class="BttomDiVDetail">
+        <svg width="1100" height="132" viewBox="0 0 1100 132" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <foreignObject x="-74.5" y="-74.5" width="1249" height="281"><div xmlns="http://www.w3.org/1999/xhtml" style="backdrop-filter:blur(37.5px);clip-path:url(#bgblur_0_2027_10417_clip_path);height:100%;width:100%"></div></foreignObject><g data-figma-bg-blur-radius="75">
+            <path d="M1092 1.25C1095.73 1.25 1098.75 4.27208 1098.75 8V124C1098.75 127.728 1095.73 130.75 1092 130.75H8C4.27208 130.75 1.25 127.728 1.25 124V8C1.25 4.27208 4.27208 1.25 8 1.25H1092Z" fill="black" fill-opacity="0.1"/>
+            <path d="M1092 1.25C1095.73 1.25 1098.75 4.27208 1098.75 8V124C1098.75 127.728 1095.73 130.75 1092 130.75H8C4.27208 130.75 1.25 127.728 1.25 124V8C1.25 4.27208 4.27208 1.25 8 1.25H1092Z" stroke="url(#paint0_linear_2027_10417)" stroke-width="1.5"/>
+            <path d="M1092 1.25C1095.73 1.25 1098.75 4.27208 1098.75 8V124C1098.75 127.728 1095.73 130.75 1092 130.75H8C4.27208 130.75 1.25 127.728 1.25 124V8C1.25 4.27208 4.27208 1.25 8 1.25H1092Z" stroke="url(#paint1_radial_2027_10417)" stroke-width="1.5"/>
+            <path d="M1092 1.25C1095.73 1.25 1098.75 4.27208 1098.75 8V124C1098.75 127.728 1095.73 130.75 1092 130.75H8C4.27208 130.75 1.25 127.728 1.25 124V8C1.25 4.27208 4.27208 1.25 8 1.25H1092Z" stroke="black" stroke-opacity="0.2" stroke-width="1.5"/>
+            </g>
+            <defs>
+            <clipPath id="bgblur_0_2027_10417_clip_path" transform="translate(74.5 74.5)"><path d="M1092 1.25C1095.73 1.25 1098.75 4.27208 1098.75 8V124C1098.75 127.728 1095.73 130.75 1092 130.75H8C4.27208 130.75 1.25 127.728 1.25 124V8C1.25 4.27208 4.27208 1.25 8 1.25H1092Z"/>
+            </clipPath><linearGradient id="paint0_linear_2027_10417" x1="734.29" y1="25.2213" x2="1114.87" y2="420.502" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#292929"/>
+            <stop offset="1" stop-color="#523E35" stop-opacity="0"/>
+            </linearGradient>
+            <radialGradient id="paint1_radial_2027_10417" cx="0" cy="0" r="1" gradientTransform="matrix(860.563 -422.513 -394.767 300.733 -399.867 374.673)" gradientUnits="userSpaceOnUse">
+            <stop stop-color="white"/>
+            <stop offset="1" stop-color="white" stop-opacity="0"/>
+            </radialGradient>
+            </defs>
+            </svg>
     </div>
 
 
