--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
             </radialGradient>
             </defs>
             </svg>
+            <div >
+                <div>
+                    <img src="./imgs/ServerLogo.png" alt="">
+                    <div>
+                        <p>Welcome to laser tag of</p>
+                        <h1>CanX Roleplay</h1>
+                    </div>
+                </div>
+            </div>
     </div>
 
 
