--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </radialGradient>
             </defs>
             </svg>
-            <div >
+            <div class="TextDetailBottomDiv">
                 <div>
                     <img src="./imgs/ServerLogo.png" alt="">
                     <div>
