Fixing some shit

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </defs>
             </svg>
             <div class="TextDetailBottomDiv">
-                <div>
+                <div class="ServerDetail">
                     <img src="./imgs/ServerLogo.png" alt="">
                     <div>
                         <p>Welcome to laser tag of</p>
