Fixing some shit

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <h1>CanX Roleplay</h1>
                     </div>
                 </div>
+                <p class="TextDetailServer">You can provide feedback on the listed jobs from the feedback section and share your thoughts about the jobs with us.</p>
             </div>
     </div>
 
