Fixing last update

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             </svg> 
     </div>
 
+    <div class="BottomVector">
+        <img src="./imgs/BottomVector.svg" alt="">
+    </div>
+
 
     <div class="BttomDiVDetail">
         <svg width="1100" height="132" viewBox="0 0 1100 132" fill="none" xmlns="http://www.w3.org/2000/svg">
