--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
 
     <div class="CreateLobby">
+        <img src="./imgs/CreateLobbyImage.png" alt="" class="bg-image">
+        <div class="kossher">
+<p>jksoskos</p>
+        </div>
 
     </div>
     <div class="BttomDiVDetail">
