--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 
     <div class="CreateLobby">
         <img src="./imgs/CreateLobbyImage.png" alt="" class="bg-image">
-        <div class="kossher">
-<p>jksoskos</p>
+        <div class="CreateLobyText">
+            <h1>Create Lobby</h1>
+            <p>Host your own game, set the rules, and invite your crew. You're in charge</p>
         </div>
 
     </div>
