--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 <clipPath id="bgblur_0_587_817_clip_path" transform="translate(75 75)"><path d="M0 6C0 2.68629 2.68629 0 6 0H139V70H6C2.68629 70 0 67.3137 0 64V6Z"/>
                 </clipPath></defs>
                 </svg>
+                <div class="TextPriceForCreate">
+                    <div class="PriceAmount"><h1>10</h1><span>$</span></div>
+                    <div><p>Price for create</p></div>
+                </div>
         </div>
 
     </div>
