--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </svg>
                 <div class="TextPriceForCreate">
                     <div class="PriceAmount"><h1>10</h1><span>$</span></div>
-                    <div><p>Price for create</p></div>
+                    <p>Price for create</p>
                 </div>
         </div>
 
