--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                     <div class="PriceAmount"><h1>10</h1><span>$</span></div>
                     <p>Price for create</p>
                 </div>
+                <div class="CreateLobbyButton">
+                    <img src="./imgs/Button.svg" alt="">
+                    <h2>Create Lobby</h2>
+                </div>
         </div>
 
     </div>
