--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
         </div>
 
     </div>
+
+    <div class="JoinLobby">
+        <img src="./imgs/JoinLobbyImage.png" alt="" class="bg-image">
+        <div class="JoinLobyText">
+            <h1>Join Lobby</h1>
+        </div>
+        <div class="JoinLobbyButton">
+            <img src="./imgs/Button.svg" alt="">
+            <h2>Join Lobby</h2>
+        </div>
+    </div>
+
+
     <div class="BttomDiVDetail">
         <svg width="1100" height="132" viewBox="0 0 1100 132" fill="none" xmlns="http://www.w3.org/2000/svg">
             <foreignObject x="-74.5" y="-74.5" width="1249" height="281"><div xmlns="http://www.w3.org/1999/xhtml" style="backdrop-filter:blur(37.5px);clip-path:url(#bgblur_0_2027_10417_clip_path);height:100%;width:100%"></div></foreignObject><g data-figma-bg-blur-radius="75">
