Fixing some shit

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
 
 
+<div class="FirstPartHomePage">
     <div class="CreateLobby">
         <img src="./imgs/CreateLobbyImage.png" alt="" class="bg-image">
         <div class="CreateLobyText">
@@ -90,6 +91,7 @@
             <h2>Join Lobby</h2>
         </div>
     </div>
+</div>
 
 
     <div class="BttomDiVDetail">
