--- a/index.html
+++ b/index.html
@@ -95,8 +95,14 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div></div>
+            <div class="userAndLeaderboardDiv">
+                <div class="LeaderBoardPageDiv">
+                    <img src="./imgs/leaderBoadImage.png" alt="">
+                    <div class="LeaderBoardText">
+                        <h1>Create Lobby</h1>
+                        <p>leaderboard of all players</p>
+                    </div>
+                </div>
                 <div></div>
             </div>
         </div>
