Fixiing some shits

--- a/index.html
+++ b/index.html
@@ -97,13 +97,19 @@
             </div>
             <div class="userAndLeaderboardDiv">
                 <div class="LeaderBoardPageDiv">
-                    <img src="./imgs/leaderBoadImage.png" alt="">
+                    <img class="LeaderBoardBg" src="./imgs/leaderBoadImage.png" alt="">
                     <div class="LeaderBoardText">
                         <h1>Create Lobby</h1>
                         <p>leaderboard of all players</p>
                     </div>
                 </div>
-                <div></div>
+                <div class="LeaderBoardPageDiv">
+                    <img class="LeaderBoardBg" src="./imgs/SelfUserImage.png" alt="">
+                    <div class="LeaderBoardText">
+                        <h1>Create Lobby</h1>
+                        <p>leaderboard of all players</p>
+                    </div>
+                </div>
             </div>
         </div>
         
