--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="LeaderBoardPageDiv">
                     <img class="LeaderBoardBg" src="./imgs/leaderBoadImage.png" alt="">
                     <div class="LeaderBoardText">
-                        <h1>Create Lobby</h1>
+                        <h1>Laderboard</h1>
                         <p>leaderboard of all players</p>
                     </div>
                 </div>
