--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
                 <div class="LeaderBoardPageDiv">
                     <img class="LeaderBoardBg" src="./imgs/SelfUserImage.png" alt="">
                     <div class="LeaderBoardText">
-                        <h1>Create Lobby</h1>
-                        <p>leaderboard of all players</p>
+                        <div>
+                            <img src="./imgs/" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
