--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
                 <div class="LeaderBoardPageDiv">
                     <img class="LeaderBoardBg" src="./imgs/SelfUserImage.png" alt="">
                     <div class="LeaderBoardText">
-                        <div>
-                            <img src="./imgs/" alt="">
+                        <div class="ImageUSerSelf">
+                            <img class="BgSteamUser" src="./imgs/BgUserImage.svg" alt="">
+                            <img class="imageSteamUser" src="./imgs/steamprofile.png" alt="">
                         </div>
                     </div>
                 </div>
