--- a/index.html
+++ b/index.html
@@ -103,18 +103,23 @@
                         <p>leaderboard of all players</p>
                     </div>
                 </div>
-                <div class="LeaderBoardPageDiv">
-                    <img class="LeaderBoardBg" src="./imgs/SelfUserImage.png" alt="">
-                    <div class="LeaderBoardText">
+                <div class="SteamUserPageDiv">
+                    <img class="SteamUserBg" src="./imgs/SelfUserImage.png" alt="">
+                    <div class="SteamUserText">
                         <div class="ImageUSerSelf">
                             <img class="BgSteamUser" src="./imgs/BgUserImage.svg" alt="">
                             <img class="imageSteamUser" src="./imgs/steamprofile.png" alt="">
+                        </div>
+                        <div class="UserNameDetaildiv">
+                            <h1>CanXPlayer01</h1>
+                            <p>ID : 6</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+
+
         
             <div class="BttomDiVDetail">
                 <svg width="1100" height="132" viewBox="0 0 1100 132" fill="none" xmlns="http://www.w3.org/2000/svg">
