Fixing some sits nig

--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
                             <h1>CanXPlayer01</h1>
                             <p>ID:6</p>
                         </div>
+                        <div class="AllDTPlayer">
+                            <div class="ReDKdDiv">
+                                <img class="ReDKdBg" src="./imgs/RedKDBg.svg" alt="">
+                                <div class="ReDKdContent">
+                                    <p>KD:</p>
+                                    <p>1.6</p>
+                                </div>
+                            </div>
+                            <div class="GreenWinDiv">
+                                <img class="GreenWinBg" src="./imgs/GreenWinBg.svg" alt="">
+                                <div class="GreenWinContent">
+                                    <p>KD:</p>
+                                    <p>1.6</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
