--- a/index.html
+++ b/index.html
@@ -125,12 +125,14 @@
                             <div class="GreenWinDiv">
                                 <img class="GreenWinBg" src="./imgs/GreenWinBg.svg" alt="">
                                 <div class="GreenWinContent">
-                                    <p>KD:</p>
+                                    <p>WIN:</p>
                                     <p>1.6</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="RedLineShadow"></div>
                 </div>
             </div>
         </div>
