Fixing ths shit nig

--- a/index.html
+++ b/index.html
@@ -219,7 +219,16 @@
                  </div>
             </button>
             </div>
+            <div class="DDLINE">
+                <div class="crescent"></div>
+            </div>
+            <div class="DDLINE">
+                <div class="crescent2"></div>
+            </div>
         <img class="CharachterCenter" src="./imgs/SettingMapCharachter.png" alt="">
+
+
+
     </div>
 
 
