--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
 
 
         <div class="LefPartDivSettiig"> 
+            <div>
+                <h1>Map Selector</h1>
+                <p></p>
+            </div>
 
         </div>
 
