--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
 
 
         <div class="LefPartDivSettiig"> 
-            <div>
+            <div class="TopTextMapSelector">
                 <h1>Map Selector</h1>
-                <p></p>
+                <p>4 Map Available</p>
             </div>
 
         </div>
