--- a/index.html
+++ b/index.html
@@ -233,8 +233,17 @@
                 <p>4 Map Available</p>
             </div>
 
-            <div>
-                
+            <div class="MapdetailAllDiv">
+                <div class="MapSelectDiv">
+                        <img src="./imgs/UpparMapImage.svg" alt="">
+                        <img src="./imgs/MapImage.png" alt="">
+                        <div>
+                            <p>Detail text</p>
+                        </div>
+        
+                </div>
+
+
             </div>
 
         </div>
