--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
 
             <div class="MapdetailAllDiv">
                 <div class="MapSelectDiv">
-                        <img src="./imgs/UpparMapImage.svg" alt="">
-                        <img src="./imgs/MapImage.png" alt="">
-                        <div>
-                            <p>Detail text</p>
-                        </div>
-        
+                    <img class="MapImage" src="./imgs/MapImage.png" alt="">
+                    <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
+                    <div class="MapDetail">
+                        <p>Detail text</p>
+                    </div>
                 </div>
+                
 
 
             </div>
