--- a/index.html
+++ b/index.html
@@ -241,8 +241,30 @@
                         <p>Detail text</p>
                     </div>
                 </div>
-                
 
+                <div class="MapSelectDiv">
+                    <img class="MapImage" src="./imgs/MapImage.png" alt="">
+                    <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
+                    <div class="MapDetail">
+                        <p>Detail text</p>
+                    </div>
+                </div>
+
+                <div class="MapSelectDiv">
+                    <img class="MapImage" src="./imgs/MapImage.png" alt="">
+                    <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
+                    <div class="MapDetail">
+                        <p>Detail text</p>
+                    </div>
+                </div>
+
+                <div class="MapSelectDiv">
+                    <img class="MapImage" src="./imgs/MapImage.png" alt="">
+                    <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
+                    <div class="MapDetail">
+                        <p>Detail text</p>
+                    </div>
+                </div>
 
             </div>
 
