--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
-                        <p>Detail text</p>
+                        <h1>Map Name Here</h1>
+                        <p>Map Description insert here</p>
                     </div>
                 </div>
 
