--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                         <h1>Map Name Here</h1>
                         <p>Map Description insert here</p>
                     </div>
+                    <div class="GreenSelectMap"></div>
                 </div>
 
                 <div class="MapSelectDiv">
