--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                         <p>Map Description insert here</p>
                     </div>
                     <div class="GreenSelectMap"></div>
+                    <div class="RedSelectMap"></div>
                 </div>
 
                 <div class="MapSelectDiv">
