--- a/index.html
+++ b/index.html
@@ -249,24 +249,33 @@
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
-                        <p>Detail text</p>
+                        <h1>Map Name Here</h1>
+                        <p>Map Description insert here</p>
                     </div>
+                    <div class="GreenSelectMap"></div>
+                    <div class="RedSelectMap"></div>
                 </div>
 
                 <div class="MapSelectDiv">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
-                        <p>Detail text</p>
+                        <h1>Map Name Here</h1>
+                        <p>Map Description insert here</p>
                     </div>
+                    <div class="GreenSelectMap"></div>
+                    <div class="RedSelectMap"></div>
                 </div>
 
                 <div class="MapSelectDiv">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
-                        <p>Detail text</p>
+                        <h1>Map Name Here</h1>
+                        <p>Map Description insert here</p>
                     </div>
+                    <div class="GreenSelectMap"></div>
+                    <div class="RedSelectMap"></div>
                 </div>
 
             </div>
