--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@
                 </div>
 
             </div>
+        </div>
 
+        <div class="CreateLobbyNewDiv">
+            <div><p>Create New Lobby</p></div>
         </div>
 
 
