--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
 
         <div class="CreateLobbyNewDiv">
-            <div><p>Create New Lobby</p></div>
+            <div class="InsideCreateLobbyNew"><p>Create New Lobby</p></div>
         </div>
 
 
