--- a/index.html
+++ b/index.html
@@ -282,7 +282,13 @@
         </div>
 
         <div class="CreateLobbyNewDiv">
-            <div class="InsideCreateLobbyNew"><p>Create New Lobby</p></div>
+            <div class="InsideCreateLobbyNew">
+                <div class="WhitlineTop"></div>
+                <p>Create New Lobby</p>
+                <div class="WhitlineBottom"></div>
+            </div>
+                
+
         </div>
 
 
