--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 
 
-        <div class="LefPartDivSettiig"> 
+        <div class="RightPartDivSettiig"> 
             <div class="TopTextMapSelector">
                 <h1>Map Selector</h1>
                 <p>4 Map Available</p>
@@ -287,6 +287,11 @@
                 <p>Create New Lobby</p>
                 <div class="WhitlineBottom"></div>
             </div>
+        </div>
+
+
+        <div class="LeftPartSettingMenu">
+
         </div>
 
 
