--- a/index.html
+++ b/index.html
@@ -291,6 +291,11 @@
 
 
         <div class="LeftPartSettingMenu">
+            <div class="input-container" id="inputBox">
+                <input type="text" id="lobby" value="">
+                <span>Lobby name</span>
+                <div class="LineLittWhite"></div>
+              </div>
 
         </div>
 
