--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                 <input type="text" id="lobby" value="">
                 <span>Lobby name</span>
                 <div class="LineLittWhite"></div>
+                <div class="WhitlineBottomInput"></div>
               </div>
 
         </div>
