--- a/index.html
+++ b/index.html
@@ -291,13 +291,20 @@
 
 
         <div class="LeftPartSettingMenu">
-            <div class="input-container" id="inputBox">
-                <input type="text" id="lobby" value="">
+            <div class="input-container">
+                <input type="text" value="">
                 <span>Lobby name</span>
                 <div class="LineLittWhite"></div>
                 <div class="WhitlineBottomInput"></div>
               </div>
-
+              
+              <div class="input-container">
+                <input type="text" value="">
+                <span>Lobby name</span>
+                <div class="LineLittWhite"></div>
+                <div class="WhitlineBottomInput"></div>
+              </div>
+              
         </div>
 
 
