--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
         <div class="LeftPartSettingMenu">
             <div class="input-container">
-                <input type="text" value="">
+                <input type="text" value="CanXLobby">
                 <span>Lobby name</span>
                 <div class="LineLittWhite"></div>
                 <div class="WhitlineBottomInput"></div>
