--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
   <div class="input-container dropdown" data-name="Game Duration">
     <p class="selected-value">5 Min</p>
     <span>Game Duration</span>
-    <div class="arrow">▾</div>
+    <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
@@ -317,7 +319,9 @@
   <div class="input-container dropdown" data-name="Player Count">
     <p class="selected-value">2 Players</p>
     <span>Player Count</span>
-    <div class="arrow">▾</div>
+        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
@@ -331,7 +335,9 @@
   <div class="input-container dropdown" data-name="Difficulty">
     <p class="selected-value">Easy</p>
     <span>Difficulty</span>
-    <div class="arrow">▾</div>
+        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
@@ -345,7 +351,9 @@
   <div class="input-container dropdown" data-name="Map Size">
     <p class="selected-value">Small</p>
     <span>Map Size</span>
-    <div class="arrow">▾</div>
+        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
@@ -359,7 +367,9 @@
   <div class="input-container dropdown" data-name="Mode">
     <p class="selected-value">Classic</p>
     <span>Mode</span>
-    <div class="arrow">▾</div>
+        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
