--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@
 
 
         <div class="LeftPartSettingMenu">
+
+
             <div class="input-container">
                 <input type="text" value="CanXLobby">
                 <span>Lobby name</span>
@@ -298,11 +300,9 @@
                 <div class="WhitlineBottomInput"></div>
               </div>
 
-
-  <!-- 5 Dropdowns -->
   <div class="input-container dropdown" data-name="Game Duration">
     <p class="selected-value">5 Min</p>
-    <span>Game Duration</span>
+    <span class="ChangePOTI">Game Duration</span>
     <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
@@ -318,7 +318,7 @@
 
   <div class="input-container dropdown" data-name="Player Count">
     <p class="selected-value">2 Players</p>
-    <span>Player Count</span>
+    <span class="ChangePOTI">Player Count</span>
         <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
@@ -334,7 +334,7 @@
 
   <div class="input-container dropdown" data-name="Difficulty">
     <p class="selected-value">Easy</p>
-    <span>Difficulty</span>
+    <span class="ChangePOTI">Difficulty</span>
         <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
@@ -350,7 +350,7 @@
 
   <div class="input-container dropdown" data-name="Map Size">
     <p class="selected-value">Small</p>
-    <span>Map Size</span>
+    <span class="ChangePOTI">Map Size</span>
         <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
@@ -366,7 +366,7 @@
 
   <div class="input-container dropdown" data-name="Mode">
     <p class="selected-value">Classic</p>
-    <span>Mode</span>
+    <span class="ChangePOTI">Mode</span>
         <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
