--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                             <img src="./imgs/Button.svg" alt="">
                             <h2>Join Lobby</h2>
                         </div>
+                        <div class="BlueLineCorner"></div>
                     </div>
                 </div>
                 <div class="userAndLeaderboardDiv">
