--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                             <h2>Join Lobby</h2>
                         </div>
                         <div class="BlueLineCorner"></div>
+                        <div class="BlueLineCornerBottom"></div>
                     </div>
                 </div>
                 <div class="userAndLeaderboardDiv">
