--- a/index.html
+++ b/index.html
@@ -319,18 +319,18 @@
   </div>
 
   <div class="input-container dropdown" data-name="Rounds">
-    <p class="selected-value">5 Rounds</p>
-    <span class="ChangePOTI">Rounds</span>
-        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <p class="selected-value">5 <span class="TextSizeCreateLobby">Rounds</span></p>
+    <span class="ChangePOTI"><span class="TextSizeCreateLobby">Rounds</span></span>
+    <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
-      <li data-value="2 Rounds">2 Rounds</li>
-      <li data-value="4 Rounds">4 Rounds</li>
-      <li data-value="6 Rounds">6 Rounds</li>
-      <li data-value="8 Rounds">8 Rounds</li>
+      <li data-value='2 <span class="TextSizeCreateLobby">Rounds</span>'>2 Rounds</li>
+      <li data-value='4 <span class="TextSizeCreateLobby">Rounds</span>'>4 Rounds</li>
+      <li data-value='6 <span class="TextSizeCreateLobby">Rounds</span>'>6 Rounds</li>
+      <li data-value='8 <span class="TextSizeCreateLobby">Rounds</span>'>8 Rounds</li>
     </ul>
   </div>
 
