--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </div>
 
   <div class="input-container dropdown" data-name="Game Duration">
-    <p class="selected-value">5 Min</p>
+    <p class="selected-value">5 <span class="TextSizeCreateLobby">Min</span></p>
     <span class="ChangePOTI">Game Duration</span>
     <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -311,16 +311,16 @@
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
-      <li data-value="5 Min">2 Min</li>
-      <li data-value="10 Min">3 Min</li>
-      <li data-value="15 Min">5 Min</li>
-      <li data-value="20 Min">10 Min</li>
+        <li data-value='2 <span class="TextSizeCreateLobby">Min</span>'>2 Min</li>
+        <li data-value='3 <span class="TextSizeCreateLobby">Min</span>'>3 Min</li>
+        <li data-value='5 <span class="TextSizeCreateLobby">Min</span>'>5 Min</li>
+        <li data-value='10 <span class="TextSizeCreateLobby">Min</span>'>10 Min</li>
     </ul>
   </div>
 
   <div class="input-container dropdown" data-name="Rounds">
     <p class="selected-value">5 <span class="TextSizeCreateLobby">Rounds</span></p>
-    <span class="ChangePOTI"><span class="TextSizeCreateLobby">Rounds</span></span>
+    <span class="ChangePOTI">Rounds</span>
     <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
