--- a/index.html
+++ b/index.html
@@ -334,19 +334,19 @@
     </ul>
   </div>
 
-  <div class="input-container dropdown" data-name="Difficulty">
-    <p class="selected-value">Easy</p>
-    <span class="ChangePOTI">Difficulty</span>
+  <div class="input-container dropdown" data-name="Music">
+    <p class="selected-value">No <span class="TextSizeCreateLobby">Music</span></p>
+    <span class="ChangePOTI">Music</span>
         <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
-      <li data-value="Easy">Easy</li>
-      <li data-value="Normal">Normal</li>
-      <li data-value="Hard">Hard</li>
-      <li data-value="Insane">Insane</li>
+        <li data-value='Gang <span class="TextSizeCreateLobby">Music</span>'>Gang Music</li>
+        <li data-value='Rap <span class="TextSizeCreateLobby">Music</span>'>Rap Music</li>
+        <li data-value='Radio <span class="TextSizeCreateLobby">Music</span>'>Radio Music</li>
+        <li data-value='RadioHead <span class="TextSizeCreateLobby">Music</span>'>RadioHead Music</li>
     </ul>
   </div>
 
