--- a/index.html
+++ b/index.html
@@ -350,6 +350,13 @@
     </ul>
   </div>
 
+  <div class="input-container">
+    <input type="text" value="Password">
+    <span class="privateLobbyText">private Lobby <span>off</span></span>
+    <div class="LineLittWhite"></div>
+    <div class="WhitlineBottomInput"></div>
+  </div>
+
   <div class="input-container dropdown" data-name="Map Size">
     <p class="selected-value">Small</p>
     <span class="ChangePOTI">Map Size</span>
