--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
 
             <div class="input-container">
-                <input type="text" value="CanXLobby">
+                <input type="text" value="CanXLobby" class="lobby-input">
                 <span>Lobby name</span>
                 <div class="LineLittWhite"></div>
                 <div class="WhitlineBottomInput"></div>
@@ -356,6 +356,7 @@
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
   </div>
+
 
   <div class="input-container dropdown" data-name="Map Size">
     <p class="selected-value">Small</p>
