--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
   <div class="input-container">
     <input type="text" value="Password">
-    <span class="privateLobbyText">private Lobby <span>off</span></span>
+    <span class="privateLobbyText">Private Lobby <span>Off</span></span>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
   </div>
