--- a/index.html
+++ b/index.html
@@ -380,37 +380,24 @@
   </div>
 
 
-  <div class="input-containerBlue input-container dropdown" data-name="Map Size">
-    <p class="selected-value">Small</p>
-    <span class="ChangePOTI">Map Size</span>
+  <div class="input-containerBlue input-container dropdown" data-name="GunChose">
+    <p class="selected-value">Multi Chose</p>
+    <span class="ChangePOTI SDS">Wich Gun Do you want</span>
         <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
     <ul class="dropdown-menu">
-      <li data-value="Small">Small</li>
-      <li data-value="Medium">Medium</li>
-      <li data-value="Large">Large</li>
-      <li data-value="Huge">Huge</li>
+      <li data-value="Multi Chose">Multi Chose</li>
+      <li data-value="Only Pistol">Only Pistol</li>
+      <li data-value="Only Rifle">Only Rifle</li>
+      <li data-value="Only Sniper">Only Sniper</li>
+      <li data-value="Only Knife">Only Knife</li>
     </ul>
   </div>
 
-  <div class="input-containerBlue input-container dropdown" data-name="Mode">
-    <p class="selected-value">Classic</p>
-    <span class="ChangePOTI">Mode</span>
-        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg></div>
-    <div class="LineLittWhite"></div>
-    <div class="WhitlineBottomInput"></div>
-    <ul class="dropdown-menu">
-      <li data-value="Classic">Classic</li>
-      <li data-value="Survival">Survival</li>
-      <li data-value="Time Attack">Time Attack</li>
-      <li data-value="Endless">Endless</li>
-    </ul>
-  </div>
+
         </div>
 
 
