--- a/index.html
+++ b/index.html
@@ -350,6 +350,23 @@
     </ul>
   </div>
 
+  <div class="input-container dropdown" data-name="Player Room">
+    <p class="selected-value">5 vs 5</p>
+    <span class="ChangePOTI">Player Room</span>
+        <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></div>
+    <div class="LineLittWhite"></div>
+    <div class="WhitlineBottomInput"></div>
+    <ul class="dropdown-menu">
+        <li data-value='1 vs 1'>1 vs 1</li>
+        <li data-value='2 vs 2'>2 vs 2</li>
+        <li data-value='3 vs 3'>3 vs 3</li>
+        <li data-value='4 vs 4'>4 vs 4</li>
+        <li data-value='5 vs 5'>5 vs 5</li>
+    </ul>
+  </div>
+
   <div class="input-container">
     <input type="text" value="Password">
     <span class="privateLobbyText">Private Lobby <span>Off</span></span>
@@ -395,6 +412,13 @@
       <li data-value="Only Sniper">Only Sniper</li>
       <li data-value="Only Knife">Only Knife</li>
     </ul>
+  </div>
+
+  <div class="input-container input-containerBlue">
+    <input type="text" value="CanXLobby" class="lobby-input">
+    <span>Lobby name</span>
+    <div class="LineLittWhite"></div>
+    <div class="WhitlineBottomInput"></div>
   </div>
 
 
