--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
   <div class="input-container input-containerBlue">
     <input type="text" value="CanXLobby" class="lobby-input">
-    <span>Lobby name</span>
+    <span>Bet Amount</span>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
   </div>
