--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
 
             <div class="input-container">
-                <input type="text" value="CanXLobby" class="lobby-input">
+                <input type="text" value="CanXLobby" class="lobby-input" spellcheck="false">
                 <span>Lobby name</span>
                 <div class="LineLittWhite"></div>
                 <div class="WhitlineBottomInput"></div>
@@ -368,7 +368,7 @@
   </div>
 
   <div class="input-container">
-    <input type="text" value="Password">
+    <input type="text" value="Password" spellcheck="false">
     <span class="privateLobbyText">Private Lobby <span>Off</span></span>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
