--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
   <div class="input-container input-containerBlue">
     <input type="text" value="CanXLobby" class="lobby-input" spellcheck="false">
-    <span>Bet Amount</span>
+    <span class="BetAmountText">Bet Amount</span>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
   </div>
