--- a/index.html
+++ b/index.html
@@ -414,7 +414,9 @@
   </div>
 
   <div class="input-container input-containerBlue">
-    <input type="text" value="CanXLobby" class="lobby-input" spellcheck="false">
+    <p class="lobby-input" contenteditable="true" spellcheck="false">
+      <span class="only-number">20000</span>$ For winners
+    </p>
     <span class="BetAmountText">Bet Amount</span>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
