Fixing some shits

--- a/index.html
+++ b/index.html
@@ -414,14 +414,15 @@
   </div>
 
   <div class="input-container input-containerBlue">
-    <p class="lobby-input" contenteditable="true" spellcheck="false">
-      <span class="only-number">20000</span>$ For winners
-    </p>
+    <div class="fake-input">
+      <p class="only-number" contenteditable="true">200000</p>
+      <p class="fixed-text">$ For Winners</p>
+    </div>
     <span class="BetAmountText">Bet Amount</span>
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
   </div>
-
+  
 
         </div>
 
