--- a/index.html
+++ b/index.html
@@ -292,8 +292,14 @@
         </div>
 
 
+
+
+
         <div class="LeftPartSettingMenu">
 
+            <div class="TitleDiv">
+                <p class="TitleTextPages">CREATE LOBBY PAGE</p>
+            </div>
 
             <div class="input-container">
                 <input type="text" value="CanXLobby" class="lobby-input" spellcheck="false">
