Finishiing this shit

--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
 
         <div class="LeftPartSettingMenu">
 
-            <div class="TitleDiv">
-                <p class="TitleTextPages">CREATE LOBBY PAGE</p>
+            <div class="TopText  animate__fadeIn animate__animated anim1">
+                <p class="FirstP">CREATE LOBBY PAGE</p>
+                <p class="SecondP">CREATE LOBBY PAGE</p>
             </div>
-
             <div class="input-container">
                 <input type="text" value="CanXLobby" class="lobby-input" spellcheck="false">
                 <span>Lobby name</span>
