--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 
     <div id="SettingLobby" class="SettingLobby">
-        <div class="closeMenu  animate__fadeIn animate__animated anim3" onclick="pageHandler('homepage')">
+        <div class="closeMenu  animate__fadeIn animate__animated anim1" onclick="pageHandler('homepage')">
             <button class="button">
                  <div class="button-box">
                    <span class="button-elem">
@@ -225,13 +225,13 @@
                  </div>
             </button>
             </div>
-            <div class="DDLINE">
+            <div class="DDLINE animate__fadeIn animate__animated anim5">
                 <div class="crescent"></div>
             </div>
-            <div class="DDLINE">
+            <div class="DDLINE animate__fadeIn animate__animated anim5">
                 <div class="crescent2"></div>
             </div>
-        <img class="CharachterCenter" src="./imgs/SettingMapCharachter.png" alt="">
+        <img class="CharachterCenter animate__fadeIn animate__animated anim1" src="./imgs/SettingMapCharachter.png" alt="">
 
 
 
